# mako_robot

./: README.md
gz_ros2_control/: CHANGELOG.rst  package.xml
gz_ros2_control/src/: gz_ros2_control_plugin.cpp  gz_system.cpp
mako_bringup/: package.xml  setup.cfg  setup.py
mako_bringup/launch/: lidar_slam_bringup.launch.py  navigation_bringup.launch.py  save_map.launch.py  slam_bringup.launch.py  test.py
mako_description/: CMakeLists.txt  package.xml
mako_description/config/: mecanum_drive_controller.yaml
mako_description/launch/: diff_drive.launch.py  mecanum_drive.launch.py
mako_description/rviz/: slam-toolbox.yaml.rviz
mako_description/urdf/model/: diff_drive.xacro.urdf  mecanum_drive.xacro.urdf
mako_description/urdf/sensors/: 3d-lidar.xacro
mako_gazebo/: CMakeLists.txt  package.xml
mako_gazebo/config/: gz_bridge.yaml
mako_gazebo/launch/: robot_gz.launch.py
mako_gazebo/worlds/: small_warehouse.sdf
mako_navigation/: CMakeLists.txt  package.xml
mako_navigation/config/: nav2_params.yaml
mako_navigation/launch/: navigation.launch.py  slam.launch.py
mako_navigation/maps/: mapa.pgm
mecanum_bringup/: package.xml  setup.cfg  setup.py
mecanum_bringup/launch/: lidar_slam_bringup.launch.py  navigation_bringup.launch.py  save_map.launch.py  slam_bringup.launch.py  test.py
mecanum_description/: CMakeLists.txt  package.xml
mecanum_description/config/: linorobot_diff_drive_controller.yaml
mecanum_description/launch/: diff_drive_example.launch.py  mecanum_drive_example.launch.py
mecanum_description/rviz/: navigation.yaml.rviz
mecanum_description/urdf/crta/: diff_drive_properties.urdf.xacro  mecanum_properties.urdf.xacro  test_diff_drive.xacro.urdf  test_mecanum_drive.xacro.urdf
mecanum_description/urdf/linorobot/: 2wd.urdf.xacro  2wd_properties.urdf.xacro  mecanum.urdf.xacro  mecanum_properties.urdf.xacro
mecanum_description/urdf/sensors/: 2d-lidar.xacro  camera.xacro  imu.xacro
mecanum_gazebo/: CMakeLists.txt  package.xml
mecanum_gazebo/config/: gz_bridge.yaml
mecanum_gazebo/launch/: robot_gz.launch.py
mecanum_gazebo/worlds/: small_house.sdf
mecanum_navigation/: CMakeLists.txt  package.xml
mecanum_navigation/config/: ekf.yaml  slam_params.yaml
mecanum_navigation/launch/: navigation.launch.py  slam.launch.py
mecanum_navigation/maps/: mapa.yaml
