<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mecanum_description</name>
    <version>0.0.0</version>
    <description>Mecanum Description Package</description>
    <maintainer email="reinaldymaslim@gmail.com">Reinaldy Maslim</maintainer>
    <license>Apache 2.0</license>

    <build_depend>control_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>rclcpp_action</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav2_msgs</build_depend>

    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>ros_gz_bridge</exec_depend>
    <exec_depend>ros_gz_sim</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>nav2_msgs</exec_depend>
    <exec_depend>xacro</exec_depend>

    <!-- ros2_control -->
    <exec_depend>gz_ros2_control</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <exec_depend>diff_drive_controller</exec_depend>
    <exec_depend>mecanum_drive_controller</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>ros2controlcli</exec_depend>
    
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
